--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 title: Saurabh kumar
 email: saurabhbaliyan000@gmail.com
 author: Saurabh Kumar
-description: >- # this means to ignore newlines until "baseurl:"
+description: 
   Saurabh Kumar is a test specialist automation and working in IBM, Bangalore.
   you can find me on linkedin and github by using the given link or contact me using the given email Id. 
   
-
-url: 
+baseurl:
+url: ""
 # plugins
 plugins: [jekyll-paginate]
 
